--- a/GasFlowControl/GasFlowControl/MainComponents.wxs
+++ b/GasFlowControl/GasFlowControl/MainComponents.wxs
@@ -1,9 +1,9 @@
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
 	<Fragment>
-		<Icon Id="icon.exe" SourceFile="D:\Code\ImGUI_GasFlowControll\resources\icon_preporation\icon_64.ico"/>
+		<Icon Id="icon.exe" SourceFile="..\..\..\..\resources\icon_preporation\icon_64.ico"/>
 
 		<ComponentGroup Id="Main" Directory="INSTALLFOLDER">
-			<File Id="fileMainExe" Name="GasFlowControlMonitoringApp.exe" Source="D:\Code\ImGUI_GasFlowControll\cmake-build-release\GasFlowControlMonitoringApp.exe" KeyPath="true">
+			<File Id="fileMainExe" Name="GasFlowControlMonitoringApp.exe" Source="..\..\..\..\cmake-build-release\GasFlowControlMonitoringApp.exe" KeyPath="true">
 				<Shortcut Name="GasFlowControlMonitoringApp" Directory="DesktopFolder"
 						 Advertise="yes" WorkingDirectory="INSTALLFOLDER" Icon="icon.exe"/>
 
@@ -11,8 +11,8 @@
 						  Advertise="yes" WorkingDirectory="INSTALLFOLDER" Icon="icon.exe" />
 			</File>
 
-			<File Id="fileMainDll" Name="SDL2.dll" Source="D:\Code\ImGUI_GasFlowControll\cmake-build-release\SDL2.dll"/>
-			<File Id="fileMainIni" Name="imgui.ini" Source="D:\Code\ImGUI_GasFlowControll\cmake-build-release\imgui.ini"/>
+			<File Id="fileMainDll" Name="SDL2.dll" Source="..\..\..\..\cmake-build-release\SDL2.dll"/>
+			<File Id="fileMainIni" Name="imgui.ini" Source="..\..\..\..\cmake-build-release\imgui.ini"/>
 		</ComponentGroup>
 	</Fragment>
 </Wix>
