--- a/GasFlowControl/GasFlowControl/MainComponents.wxs
+++ b/GasFlowControl/GasFlowControl/MainComponents.wxs
@@ -3,7 +3,7 @@
 		<Icon Id="icon.exe" SourceFile="..\..\..\..\resources\icon_preporation\icon_64.ico"/>
 
 		<ComponentGroup Id="Main" Directory="INSTALLFOLDER">
-			<File Id="fileMainExe" Name="GasFlowControlMonitoringApp.exe" Source="..\..\..\..\cmake-build-release\GasFlowControlMonitoringApp.exe" KeyPath="true">
+			<File Id="fileMainExe" Name="GasFlowControlMonitoringApp.exe" Source="..\..\..\..\cmake-build-release\\Release\GasFlowControlMonitoringApp.exe" KeyPath="true">
 				<Shortcut Name="GasFlowControlMonitoringApp" Directory="DesktopFolder"
 						 Advertise="yes" WorkingDirectory="INSTALLFOLDER" Icon="icon.exe"/>
 
@@ -11,8 +11,8 @@
 						  Advertise="yes" WorkingDirectory="INSTALLFOLDER" Icon="icon.exe" />
 			</File>
 
-			<File Id="fileMainDll" Name="SDL2.dll" Source="..\..\..\..\cmake-build-release\SDL2.dll"/>
-			<File Id="fileMainIni" Name="imgui.ini" Source="..\..\..\..\cmake-build-release\imgui.ini"/>
+			<File Id="fileMainDll" Name="SDL2.dll" Source="..\..\..\..\cmake-build-release\Release\SDL2.dll"/>
+			<File Id="fileMainIni" Name="imgui.ini" Source="..\..\..\..\resources\imgui_configuration\imgui.ini"/>
 		</ComponentGroup>
 	</Fragment>
 </Wix>
