Updated path for SDL2.dll

--- a/GasFlowControl/GasFlowControl/MainComponents.wxs
+++ b/GasFlowControl/GasFlowControl/MainComponents.wxs
@@ -11,7 +11,7 @@
 						  Advertise="yes" WorkingDirectory="INSTALLFOLDER" Icon="icon.exe" />
 			</File>
 
-			<File Id="fileMainDll" Name="SDL2.dll" Source="..\..\..\..\cmake-build-release\Release\SDL2.dll"/>
+			<File Id="fileMainDll" Name="SDL2.dll" Source="..\..\..\..\resources\dinamic_libs\SDL2.dll"/>
 			<File Id="fileMainIni" Name="imgui.ini" Source="..\..\..\..\resources\imgui_configuration\imgui.ini"/>
 		</ComponentGroup>
 	</Fragment>
