--- a/GasFlowControl/GasFlowControl/Package.wxs
+++ b/GasFlowControl/GasFlowControl/Package.wxs
@@ -1,11 +1,14 @@
-﻿<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
+﻿<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs" xmlns:vs="http://wixtoolset.org/schemas/v4/wxs/vs">
 	<Package Name="GasFlowControl" Manufacturer="Oleg Sirenko" Version="1.0.0.0" UpgradeCode="9afe748d-0f34-4321-a772-4d6d9c36a2f0" ProductCode="{840B12F0-B2A8-41D6-B106-337626EB2601}">
 		<MajorUpgrade DowngradeErrorMessage="!(loc.DowngradeError)" />
 		<MediaTemplate EmbedCab="true"/>
 
 		<Icon Id="Icon" SourceFile="..\..\..\..\resources\icon_preporation\icon.ico"/>
 		<Property Id="ARPPRODUCTICON" Value="Icon" />
-		
+
+        <PropertyRef Id="VS2017_ROOT_FOLDER	" />
+        <CustomActionRef Id="VS2017Setup" />
+
 		<Feature Id="Main">
 			<ComponentGroupRef Id="Main" />
 		</Feature>
