Added logo to installer

--- a/Bootstrap/install_vc_redist.wxs
+++ b/Bootstrap/install_vc_redist.wxs
@@ -17,7 +17,7 @@
         ShowVersion="yes"
         SuppressOptionsUI="yes"
         Theme="hyperlinkLargeLicense"
-        LogoFile="../../resources/new_icon.png"
+        LogoFile="..\..\..\resources/new_icon.png"
         />
 
     </BootstrapperApplication>
