--- a/Bootstrap/install_vc_redist.wxs
+++ b/Bootstrap/install_vc_redist.wxs
@@ -9,7 +9,8 @@
     Copyright="© 2024 Oleg Sirenko"
     AboutUrl="https://github.com/OlegSirenko/Monitoring_GasFlowControl"
     UpgradeCode="dfc3a102-ad36-44ad-8327-92c0d56ae401"
-    Condition="VersionNT &gt;= v6.1">
+    Condition="VersionNT &gt;= v6.1"
+    IconSourceFile="..\..\..\resources\icon_preporation\icon_64.ico">
 
     <BootstrapperApplication>
       <bal:WixStandardBootstrapperApplication
