Updated installer for new name

--- a/GasFlowControl/GasFlowControl/MainComponents.wxs
+++ b/GasFlowControl/GasFlowControl/MainComponents.wxs
@@ -3,11 +3,11 @@
 		<Icon Id="icon.exe" SourceFile="..\..\..\..\resources\icon_preporation\icon_64.ico"/>
 
 		<ComponentGroup Id="Main" Directory="INSTALLFOLDER">
-			<File Id="fileMainExe" Name="GasFlowControlMonitoringApp.exe" Source="..\..\..\..\cmake-build-release\Release\Monitor.exe" KeyPath="true">
-				<Shortcut Name="Gas Flow Control Monitoring Application" Directory="DesktopFolder"
+			<File Id="fileMainExe" Name="Monitor" Source="..\..\..\..\cmake-build-release\Release\Monitor.exe" KeyPath="true">
+				<Shortcut Name="Monitor" Directory="DesktopFolder"
 						 Advertise="yes" WorkingDirectory="INSTALLFOLDER" Icon="icon.exe"/>
 
-				<Shortcut Name="GasFlowControlMonitoringApp" Directory="ProgramMenuFolder"
+				<Shortcut Name="Monitor" Directory="ProgramMenuFolder"
 						  Advertise="yes" WorkingDirectory="INSTALLFOLDER" Icon="icon.exe" />
 			</File>
 
