--- a/GasFlowControl/GasFlowControl/Package.wxs
+++ b/GasFlowControl/GasFlowControl/Package.wxs
@@ -1,5 +1,5 @@
 ﻿<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs" xmlns:vs="http://wixtoolset.org/schemas/v4/wxs/vs">
-	<Package Name="GasFlowControl" Manufacturer="Oleg Sirenko" Version="1.1.0.1" UpgradeCode="9afe748d-0f34-4321-a772-4d6d9c36a2f0" ProductCode="{840B12F0-B2A8-41D6-B106-337626EB2601}" InstallPrivileges="elevated" InstallScope="perMachine">
+	<Package Name="GasFlowControl" Manufacturer="Oleg Sirenko" Version="1.1.0.1" UpgradeCode="9afe748d-0f34-4321-a772-4d6d9c36a2f0" ProductCode="{840B12F0-B2A8-41D6-B106-337626EB2601}">
 		<MajorUpgrade DowngradeErrorMessage="!(loc.DowngradeError)" />
 		<MediaTemplate EmbedCab="true"/>
 
